GNOME Bugzilla – Bug 757272
Wrong modified date
Last modified: 2015-11-26 16:40:47 UTC
Created attachment 314349 [details] Trying to explain the bug. Hello, Congratulations for gnome 3.18, I love it ! I have a file which was modified on Oct 27, and on the list view it appears like it would be modified today. The last column in the screenshot is modified date. Regards PD: Using gnome3.18 from Debian Sid
I've just hit this bug. Files modified yesterday simply show the time but not the date, which makes it look like the file was modified today!
Created attachment 316325 [details] [review] file: fix wrong date calculation We were checking how many days ago the file was modified by checking directly the current time with the file modification time, which is wrong if the file was modified a few hours ago but the day already passed. What happened is that it was showing the time as in if it was modified in the same day, instead of saying "Yesterday". To fix it, check the time difference with the midnight time.
Attachment 316325 [details] pushed as bcaf4ef - file: fix wrong date calculation