libnemo-private/nemo-file.c
@@ -4855,6 +4855,7 @@ nemo_file_get_date_as_string (NemoFile       *file,
 {
 	time_t file_time_raw;
   	GDateTime *file_date, *now;
+        GDateTime *today_midnight;
 	gint days_ago;
 	gboolean use_24;
 	const gchar *format;
@@ -4879,8 +4880,13 @@ nemo_file_get_date_as_string (NemoFile       *file,
   	file_date = g_date_time_new_from_unix_local (file_time_raw);
 	if (date_format != NEMO_DATE_FORMAT_FULL) {
 		now = g_date_time_new_now_local ();
+                today_midnight = g_date_time_new_local (g_date_time_get_year (now),
+                                                        g_date_time_get_month (now),
+                                                        g_date_time_get_day_of_month (now),
+                                                        0, 1, 0);
 
-		days_ago = g_date_time_difference (now, file_date) / (24 * 60 * 60 * 1000 * 1000L);
+		days_ago = g_date_time_difference (today_midnight, file_date) /
+                           (24 * 60 * 60 * 1000 * 1000L);
 
 		if (cinnamon_privacy_preferences == NULL) {
 			GDesktopClockFormat value = g_settings_get_enum (gnome_interface_preferences, "clock-format");
@@ -4981,6 +4987,7 @@ nemo_file_get_date_as_string (NemoFile       *file,
 		}
 
 		g_date_time_unref (now);
+		g_date_time_unref (today_midnight);
 	} else {
 		// xgettext:no-c-format
 		format = N_("%c");
